# dotfiles-tui

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/dotfiles-cli/: Cargo.toml
crates/dotfiles-cli/src/: banner.rs  commands.rs  diff_view.rs  main.rs  pkg.rs  profile.rs  show.rs  table.rs
crates/dotfiles-core/: Cargo.toml
crates/dotfiles-core/src/: deploy.rs  edit.rs  lib.rs
crates/dotfiles-tui/: Cargo.toml
crates/dotfiles-tui/src/: main.rs
docs/architecture/: INDEX.md
docs/architecture/foundation/: ADR-001-clean-room-agent-native-dotfiles-tool-on-the-shared-manifest.md  ADR-002-the-manifest-is-a-self-documenting-catalog.md  ADR-003-manifest-serialization-as-toml-array-of-tables.md  ADR-004-crate-workspace-shape-and-library-stack.md  ADR-005-live-projection-of-a-derived-always-fresh-dotfiles-state.md  ADR-006-optional-per-entry-spec-vocabulary.md  ADR-008-profiles-named-scopes-over-dotfiles-and-packages-per-machine-or-role.md
docs/architecture/interface/: ADR-100-change-detail-diff-rendering.md  ADR-101-clap-subcommands-for-nested-verbs.md  ADR-102-status-reflects-active-profile-state.md  ADR-103-friendly-change-detail-diff-in-the-cli.md
docs/plans/: 2026-06-21-simplify-to-schema-and-cli.md  2026-06-22-bash-parity.md
examples/: dotfiles-manifest.toml
