# dotfiles-tui workspace (ADR-004): one core, two front-ends.
[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Aaron Bockelie"]
repository = "https://github.com/aaronsb/dotfiles-tui"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
