# dotfiles workspace (ADR-004, amended by ADR-007): one core, one CLI surface.
[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["Aaron Bockelie"]
repository = "https://github.com/aaronsb/dotfiles-cli"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
toml_edit = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
