[package]
name = "dotfiles-cli"
description = "Non-interactive JSON surface for dotfiles-tui — the agent-facing front-end."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "dotfiles-cli"
path = "src/main.rs"

[dependencies]
dotfiles-core = { path = "../dotfiles-core" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
