[package]
name = "dotfiles-cli"
description = "The dotfiles CLI — self-documenting, agent-native dotfiles management."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "dotfiles"
path = "src/main.rs"

[dependencies]
dotfiles-core = { path = "../dotfiles-core" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
figlet-rs = "1"
