[package]
name = "dotfiles-core"
description = "Pure state model for the dotfiles CLI: manifest, deploy status, derived state."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
