[package]
name = "dotfiles-tui"
description = "Ratatui human surface for dotfiles-tui — the always-fresh inventory projection."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "dotfiles-tui"
path = "src/main.rs"

[dependencies]
dotfiles-core = { path = "../dotfiles-core" }
